src/test/ui/regions/regions-free-region-ordering-incorrect.nll.stderr
error: lifetime may not live long enough
  --> $DIR/regions-free-region-ordering-incorrect.rs:15:9
   |
LL |   impl<'b, T> Node<'b, T> {
   |        -- lifetime `'b` defined here
LL |       fn get<'a>(&'a self) -> &'b T {
   |              -- lifetime `'a` defined here
LL | /         match self.next {
LL | |             Some(ref next) => next.get(),
LL | |             None => &self.val
LL | |         }
   | |_________^ returning this value requires that `'a` must outlive `'b`

error: aborting due to previous error

